[tool.poetry]
name = "leetcode"
version = "1.0.0"
description = "Notes on LeetCode problem solving and basics of algorithm."
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.14"
mkdocs-exclude = "^1.0.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
manim = "^0.15.2"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
